# sharded-queue.py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: publish.yml  test.yml
sharded_queue/: __init__.py  drivers.py  handlers.py  protocols.py  schema.py  settings.py
tests/: test_backlog.py  test_deferred.py  test_deffered.py  test_duplicate.py  test_handler.py  test_lock.py  test_nested.py  test_order.py  test_performance.py  test_priority.py  test_queue.py  test_recurrent.py  test_serializer.py  test_sharding.py  test_storage.py  test_worker.py  test_worker_pause.py
